[tool.poetry]
name = "langchain-gpt-agent"
version = "0.1.0"
description = "LangChain gpt agent"
authors = ["Dev Gill <26435947+sdevgill@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "langchain_gpt_agent"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
