[tool.poetry]
name = "langchain-gpt-agent"
version = "0.1.0"
description = "LangChain gpt agent"
authors = ["Dev Gill <26435947+sdevgill@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "langchain_gpt_agent"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.6"
python-dotenv = "^1.0.0"
pinecone-client = "^2.2.1"
pandas = "^2.0.1"
tqdm = "^4.65.0"
langchain = "^0.0.161"
wget = "^3.2"
jupyterlab = "^3.6.3"
google-search-results = "^2.4.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
